<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff"
        android:gravity="clip_horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout1"
            android:padding="5dp">

            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_edit_profile"
                    android:id="@+id/textViewCreateProfileTitle"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="18dp" />
            </TableRow>

            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textview_create_a_profile_description"
                    android:id="@+id/textViewCreateProfileDescription"
                    android:textIsSelectable="false"
                    android:gravity="center" />
            </TableRow>

            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:src="@drawable/default_avatar"
                        android:layout_margin="10dp"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_marginLeft="10dip"
                        android:id="@+id/imageViewAvatar"
                        android:contentDescription="avatar" />
                </LinearLayout>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout2"
            android:padding="5dp"
            android:layout_below="@+id/tableLayout1">

            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_birthday"
                    android:gravity="left"
                    android:layout_column="0"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:id="@+id/editTextBirthday"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="1"
                    android:editable="false"
                    android:focusable="false" />

            </TableRow>

            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_gender"
                    android:gravity="left|bottom"
                    android:layout_column="0"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <RadioGroup android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textview_gender_male"
                        android:textColor="#000"
                        android:layout_marginRight="30dp"
                        android:checked="true"
                        android:id="@+id/radioButtonMale" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textview_gender_female"
                        android:textColor="#000"
                        android:id="@+id/radioButtonFemale" />
                </RadioGroup>
            </TableRow>

            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_email"
                    android:gravity="left"
                    android:layout_column="0"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <EditText android:layout_width="wrap_content"
                    android:id="@+id/editTextEmail"
                    android:layout_height="wrap_content" android:layout_span="3"
                    android:inputType="textEmailAddress" android:layout_weight="1">
                </EditText>
            </TableRow>

            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_zip_code"
                    android:gravity="left"
                    android:layout_column="0"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <EditText android:layout_width="wrap_content"
                    android:id="@+id/editTextZipCode"
                    android:layout_height="wrap_content" android:layout_span="3"
                    android:inputType="numberDecimal" android:layout_weight="1">
                </EditText>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/button_confirm"
            android:background="@drawable/corner"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/tableLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp" />

    </RelativeLayout>

</ScrollView>
