<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.simsim.ui.HostSpaceSettingsActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_detail"
                    android:gravity="center"
                    android:textColor="#FF9900"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton"
                    android:contentDescription="space photo"
                    android:src="@drawable/add_photo" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_name"
                    android:gravity="left|center"
                    android:textColor="#FF9900"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_name_2"
                    android:gravity="left|center"
                    android:textColor="#999999"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_description"
                    android:gravity="left|center"
                    android:textColor="#FF9900"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_name_2"
                    android:gravity="left|center"
                    android:textColor="#999999"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_address"
                    android:gravity="left|center"
                    android:textColor="#FF9900"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_name_2"
                    android:gravity="left|center"
                    android:textColor="#999999"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_privacy"
                    android:gravity="left|center"
                    android:textColor="#FF9900"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_privacy_2"
                    android:gravity="left|center"
                    android:textColor="#999999"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_extra_information"
                    android:gravity="left|center"
                    android:textColor="#FF9900"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_host_space_name_2"
                    android:gravity="left|center"
                    android:textColor="#999999"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/button_save"
                    android:background="@drawable/corner"
                    android:textColor="#FFFFFF" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

</ScrollView>
